--- a/footclick_front/src/pages/AboutPage_Player/AboutPage_Player.scss
+++ b/footclick_front/src/pages/AboutPage_Player/AboutPage_Player.scss
@@ -1,4 +1,27 @@
-// --------------------------@start AboutPage_Player -----------------------------------------
+//------------------------------------@start about page---------------------------------------------------------
 .AboutPage_Player {
+  //------------------------------------@start navbar---------------------------------------------------------
+
+  //------------------------------------@end navbar---------------------------------------------------------
+  .Mission {
+    padding-top: 10rem;
+    h1 {
+      text-align: center;
+    }
+    p {
+      text-align: center;
+    }
+  }
+  .About {
+    text-align: center;
+    margin-top: 5rem;
+    p {
+      margin-left: 10rem;
+      margin-right: 10rem;
+    }
+  }
+  .Footer_About {
+    margin-top: 10rem;
+  }
 }
-// --------------------------@end AboutPage_Player -----------------------------------------
+//------------------------------------@end about page---------------------------------------------------------
