--- a/footclick_front/src/pages/BestGoalsPage_Player/BestGoalsPage_Player.scss
+++ b/footclick_front/src/pages/BestGoalsPage_Player/BestGoalsPage_Player.scss
@@ -1,5 +1,5 @@
 //---------------------------------@start bestGoalspage_User-----------------------------------
-.BestGoalsPage_User {
+.BestGoalsPage_Player {
   .BestGoalsPage_User_Content {
     padding-top: 10rem;
     height: 40rem;
@@ -14,19 +14,17 @@
       width: 40%;
       margin: 0 auto;
     }
-    .Parent_Grid {
-      margin-top: 3rem;
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(10rem, 2fr));
-      grid-gap: 7rem;
-      p {
-        width: 100%;
-      }
-      img {
-        width: 100%;
-        height: 15rem;
-      }
+  }
+  .BestGoalsPage_User_Content_Videos {
+    margin-top: 5rem;
+    .embed-responsive-item {
+      width: 30rem;
+      height: 15rem;
     }
+  }
+
+  .embed-responsive-16by9 {
+    height: 20rem;
   }
 }
 //---------------------------------@end bestGoalspage_User-----------------------------------
