--- a/footclick_front/src/pages/BestGoalsPage_User/BestGoalsPage_User.scss
+++ b/footclick_front/src/pages/BestGoalsPage_User/BestGoalsPage_User.scss
@@ -17,16 +17,19 @@
     .Parent_Grid {
       margin-top: 3rem;
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(10rem, 2fr));
+      grid-template-columns: repeat(3, minmax(250px, 1fr));
       grid-gap: 7rem;
       p {
-        width: 100%;
+        // width: 100%;
       }
       img {
-        width: 100%;
+        // width: 100%;
         height: 15rem;
       }
     }
+  }
+  .Footer {
+    margin-top: 20rem;
   }
 }
 //---------------------------------@end bestGoalspage_User-----------------------------------
