--- a/footclick_front/src/pages/PlayersPage/PlayersPage.scss
+++ b/footclick_front/src/pages/PlayersPage/PlayersPage.scss
@@ -56,13 +56,37 @@
       margin-top: 1rem;
     }
 
-    //-----@start HEADER--------------------------------------------------------------
+    //---HEADER-------------------------
     .display-3 {
       font-size: 2.5rem;
       padding-bottom: 2rem;
     }
-    //-----@end HEADER--------------------------------------------------------------
-
+    //-----'Join Team' Panel--------
+    .TabPanelJoin {
+      .cardTitle {
+        text-align: center;
+      }
+      ul {
+        list-style: none;
+        font-size: 1.2rem;
+      }
+      display: grid;
+      grid-template-columns: repeat(3, minmax(250px, 1fr));
+      grid-gap: 5rem;
+    }
+    //-----'Match Challenge' Panel--------
+    .TabPanelChallenge {
+      .cardTitle {
+        text-align: center;
+      }
+      ul {
+        list-style: none;
+        font-size: 1.2rem;
+      }
+      display: grid;
+      grid-template-columns: repeat(3, minmax(250px, 1fr));
+      grid-gap: 5rem;
+    }
     //-----@end HOST Tab--------------------------------------------------------------
     overflow: hidden;
     border: 1px solid #ccc;
