--- a/footclick_front/src/pages/PlayersPage/PlayersPage.scss
+++ b/footclick_front/src/pages/PlayersPage/PlayersPage.scss
@@ -87,6 +87,21 @@
       grid-template-columns: repeat(3, minmax(250px, 1fr));
       grid-gap: 5rem;
     }
+    //-----'Match Challenge' Panel--------
+    .TabPanelRequest {
+      .cardTitle {
+        text-align: center;
+      }
+      p {
+        font-size: 1.3rem;
+      }
+      .invitationCard {
+        margin-left: 8rem;
+      }
+      display: grid;
+      grid-template-columns: repeat(2, minmax(250px, 1fr));
+      grid-gap: 5rem;
+    }
     //-----@end HOST Tab--------------------------------------------------------------
     overflow: hidden;
     border: 1px solid #ccc;
