make_images_local_userpage

--- a/footclick_front/src/components/HeroSection_User/HeroSection_User.scss
+++ b/footclick_front/src/components/HeroSection_User/HeroSection_User.scss
@@ -1,6 +1,7 @@
 //------------------------@start Hero section ------------------------------------------------------------------------
 .HeroSection_User {
-  background-image: url("https://images.pexels.com/photos/46792/the-ball-stadion-football-the-pitch-46792.jpeg?cs=srgb&dl=ball-field-grass-46792.jpg&fm=jpg");
+  // background-image: url("https://images.pexels.com/photos/46792/the-ball-stadion-football-the-pitch-46792.jpeg?cs=srgb&dl=ball-field-grass-46792.jpg&fm=jpg");
+  background-image: url("../../assets/images/stadium-hero-section.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   // background-position: bottom;
@@ -8,7 +9,7 @@
   // background-position-y: 1em;
   // position: absolute;
   height: 42rem;
-  background-color: red;
+  // background-color: red;
   //------------------------@start Hero content ------------------------------------------------------------------------
   .Hero_Content {
     width: 30%;
