all_images_made_local

--- a/footclick_front/src/components/HeroSection_Player/HeroSection_Player.scss
+++ b/footclick_front/src/components/HeroSection_Player/HeroSection_Player.scss
@@ -1,6 +1,6 @@
 //------------------------@start Hero section ------------------------------------------------------------------------
 .HeroSection_Player {
-  background-image: url("https://images.pexels.com/photos/46792/the-ball-stadion-football-the-pitch-46792.jpeg?cs=srgb&dl=ball-field-grass-46792.jpg&fm=jpg");
+  background-image: url("../../assets/images/stadium-hero-section.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   // background-position: bottom;
